Kubernetes/lab-python-mock-server.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: lab-python-mock
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-python-mock-deployment
  namespace: lab-python-mock
  labels:
    app: lab-python-mock-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lab-python-mock-app
  template:
    metadata:
      labels:
        app: lab-python-mock-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: anomalyhq
        image: anomalyhq/lab-python-mock-server:v0.1.0
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: Always
      nodeSelector:
        kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: lab-python-mock-service
  namespace: lab-python-mock
  labels:
    app: lab-python-mock-app
spec:
  selector:
    app: lab-python-mock-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab-python-mock-networking
  namespace: lab-python-mock
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: lab-python-mock-service
              port:
                number: 80
